<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wainaina.livelator.Translated_Speech"
    android:id="@+id/tanslated_speech_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/live_translation_lable"
            android:id="@+id/livelable_s"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/from_lang_lable"
            android:id="@+id/id_from_lang_lable_s"
            android:layout_below="@+id/livelable_s"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="55dp" />


        <ImageView
            android:id="@+id/play_pause_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/play_circle"
            android:layout_below="@+id/from_lang_s"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/contectDescriptionPlayPause" />
        <!--android:layout_below="@id/from_lang_s"-->
        <!--android:layout_toRightOf="@id/id_to_lang_lable_s"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/to_lang_lable"
            android:id="@+id/id_to_lang_lable_s"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/id_from_lang_lable_s"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_lang_s"
            android:layout_alignBottom="@+id/id_to_lang_lable_s"
            android:layout_toRightOf="@+id/id_to_lang_lable_s"
            android:layout_toEndOf="@+id/id_to_lang_lable_s"
            android:layout_alignTop="@+id/id_to_lang_lable_s"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_lang_s"
            android:layout_alignTop="@+id/id_from_lang_lable_s"
            android:layout_toRightOf="@+id/id_from_lang_lable_s"
            android:layout_toEndOf="@+id/id_from_lang_lable_s"
            android:layout_alignBottom="@+id/id_from_lang_lable_s"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="74dp"
            android:id="@+id/textResult" />
    </RelativeLayout>


</FrameLayout>
