<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wainaina.livelator.Translate_Text">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/translated_text_view_lable"
        android:id="@+id/livelable_t"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/from_lang_lable"
        android:id="@+id/id_from_lang_lable_t"
        android:layout_below="@+id/livelable_t"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/from_lang_t"
        android:layout_alignTop="@+id/id_from_lang_lable_t"
        android:layout_toRightOf="@+id/id_from_lang_lable_t"
        android:layout_toEndOf="@+id/id_from_lang_lable_t"
        android:layout_alignBottom="@+id/id_from_lang_lable_t"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/to_lang_lable"
        android:id="@+id/id_to_lang_lable_t"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/id_from_lang_lable_t"
        android:layout_alignLeft="@id/id_from_lang_lable_t" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/to_lang_t"
        android:layout_alignBottom="@+id/id_to_lang_lable_t"
        android:layout_toRightOf="@+id/id_to_lang_lable_t"
        android:layout_toEndOf="@+id/id_to_lang_lable_t"
        android:layout_alignTop="@+id/id_to_lang_lable_t"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/play_pause_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_to_lang_lable_t"
        android:layout_marginTop="20dp"
        android:src="@mipmap/play_circle"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/translated_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:inputType="textMultiLine" />
    </RelativeLayout>

</FrameLayout>
